# curso-yuneta

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  curso-yuneta.kdev4  install_manifest.txt
01-print-hello-world/c/: .CMakeLists.txt.kate-swp  CHANGES.rst  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
01-print-hello-world/c/docs/: Executing_(01&02).mkv
02-print-hello-world-loop/c/: CHANGES.rst  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
02-print-hello-world-loop/c/docs/: Executing.mkv
02-print-hello-world-loop/c/src/: main.c
02-print-hello-world-loop/js/: main.js
02-print-hello-world-loop/js/src/: main.js  package-lock.json  package.json
02-print-hello-world-loop/py/: main.py
02-print-hello-world-loop/py/src/: main.py
03-print-hello-parametername/c/: CHANGES.rst  CMakeLists.txt
03-print-hello-parametername/c/docs/: Executing.mkv
03-print-hello-parametername/c/src/: main.c
04-tcp-listener-writer/c/: CMakeLists.txt
04-tcp-listener-writer/c/src/: main.c
04-tcp-listener-writer/py/: main.py  setup.py
05-tcp-file-io/c/: CMakeLists.txt
05-tcp-file-io/c/src/: main.c
05-tcp-file-io/py/: main.py  setup.py  tcp_fileexample.txt
06-tcp-filelist-io/c/: CMakeLists.txt
06-tcp-filelist-io/c/src/: main.c
06-tcp-filelist-io/py/: CHANGES.txt  main.py  setup.py  tcp_fileexample.txt  tcp_fileexample_02.txt  tcp_fileexample_03.txt
